--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     </head>
     <body>
         <canvas id="game-container"></canvas>
+        <div id="modal" class="hidden">Score: <p id="score">0</p>
+          <button id="restart" onclick="{{restartGame()}}">Restart</button>
+        </div>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.3/gsap.min.js" integrity="sha512-7Au1ULjlT8PP1Ygs6mDZh9NuQD0A5prSrAUiPHMXpU6g3UMd8qesVnhug5X4RoDr35x5upNpx0A6Sisz1LSTXA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
        <script src="index.js"></script>
     </body>
